cmake_minimum_required(VERSION 3.19)
project(CSC_155)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory("${PROJECT_SOURCE_DIR}/labs/lab_1")
add_subdirectory("${PROJECT_SOURCE_DIR}/labs/lab_2")
add_subdirectory("${PROJECT_SOURCE_DIR}/labs/lab_3")
add_subdirectory("${PROJECT_SOURCE_DIR}/labs/lab_4")
add_subdirectory("${PROJECT_SOURCE_DIR}/labs/lab_5")
add_subdirectory("${PROJECT_SOURCE_DIR}/exercises/exercise_1")
add_subdirectory("${PROJECT_SOURCE_DIR}/exercises/exercise_2")
add_subdirectory("${PROJECT_SOURCE_DIR}/exercises/exercise_3")
add_subdirectory("${PROJECT_SOURCE_DIR}/exercises/exercise_4")