cmake_minimum_required(VERSION 3.19)
project(CSC_155)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory("${PROJECT_SOURCE_DIR}/lab_1")
add_subdirectory("${PROJECT_SOURCE_DIR}/lab_2")
add_subdirectory("${PROJECT_SOURCE_DIR}/lab_3")
add_subdirectory("${PROJECT_SOURCE_DIR}/lab_4")
add_subdirectory("${PROJECT_SOURCE_DIR}/lab_5")